--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,3 +14,9 @@
 @import './components/login';
 @import './components/sign-up';
 @import './components/gnb';
+@import './components/home';
+@import './components/category-nav';
+@import './components/pro-category';
+@import './components/pro-thumbnail';
+@import './components/pro-index';
+@import './components/pro-options';
