--- a/styles/components/_gnb.scss
+++ b/styles/components/_gnb.scss
@@ -1,3 +1,7 @@
+.gnb {
+  border-bottom: 1px solid $border;
+}
+
 .gnb-wrap {
   display: flex;
   justify-content: space-between;
@@ -79,6 +83,7 @@
     display: block;
     max-height: 272px;
     border: 1px solid $border;
+    background-color: $white;
   }
 
   .search-list-header {
@@ -161,37 +166,114 @@
   }
 }
 
-// .utils {
-//   display: flex;
-//   align-items: center;
-//   li a {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     width: 32px;
-//     height: 32px;
-//     margin-right: 8px;
-//     border-radius: 50%;
+.utils {
+  display: flex;
+  align-items: center;
+  .authorized {
+    display: flex;
+    align-items: center;
 
-//     &:hover {
-//       color: $white;
-//       background-color: $blue;
-//     }
-//   }
-//   div {
-//     width: 32px;
-//     height: 32px;
-//     border-radius: 50px;
-//     img {
-//       width: 100%;
-//       height: 100%;
-//     }
+    .authorized-bookmark-wrap,
+    .authorized-bell-wrap,
+    .authorized-cart-wrap {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 32px;
+      height: 32px;
+      margin-right: 8px;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: all 0.3ms ease-in-out;
 
-//     &:hover {
-//       border: 2px solid $blue;
-//     }
-//   }
-// }
+      &:hover {
+        background-color: $blue;
+      }
+    }
+
+    .user-profile-img {
+      position: relative;
+      z-index: 1;
+      margin-right: 32px;
+
+      &.show::before {
+        content: "";
+        position: absolute;
+        z-index: 2;
+        top: calc(100% - 5px);
+        left: 5.5px;
+        border-top:0px solid transparent;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-bottom: 16px solid $border;
+      }
+      &.show::after {
+          content: "";
+          position: absolute;
+          z-index: 3;
+          top: calc(100% - 3px);
+          left: 5.5px;
+          border-top: 0px solid transparent;
+          border-left: 10px solid transparent;
+          border-right: 10px solid transparent;
+          border-bottom: 16px solid $white;
+      }
+
+      button{
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        padding: 0;
+        cursor: pointer;
+        border: 1px solid $white;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+        &:hover {
+          border: 1px solid $blue;
+        }
+      }
+
+      .user-modal {
+        position: absolute;
+        left: -80px;
+        top: calc(100% + 10px);
+        z-index: 2;
+        display: none;
+        width: 200px;
+        max-height: 0;
+        padding: 8px 8px 8px 8px;
+        border: none;
+        border-radius: 4px;
+        overflow: hidden;
+        transition: border-color 200ms ease-in, padding 200ms ease-in,
+                max-height 200ms ease-in, box-shadow 200ms ease-in;
+      }
+    
+      .user-modal.show {
+        display: block;
+        max-height: 272px;
+        border: 1px solid $border;
+        background-color: $white;
+
+        li {
+          width: 100%;
+          z-index: 2;
+          height: 40px;
+          padding: 10px 10px 10px 30px;
+          background-color: $white;
+          cursor: pointer;
+
+          &:hover {
+            background-color: $background;
+          }
+        }
+      }
+    
+    }
+  }
+}
 
 .utils {
   display: flex;
