--- a/styles/modules/_input.scss
+++ b/styles/modules/_input.scss
@@ -1,4 +1,5 @@
-input {
+input,
+select {
   width: 100%;
   height: 40px;
   padding: 8px 16px;
@@ -12,11 +13,11 @@ input {
     color: $tertiary;
   }
 
-  &:hover {
-    background-color: $background;
-  }
-
   &.disabled {
     cursor: default;
+  }
+
+  &:hover {
+    background-color: $background;
   }
 }
