--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,3 +20,5 @@
 @import './components/pro-thumbnail';
 @import './components/pro-index';
 @import './components/pro-options';
+@import './components/pro-tab';
+@import './components/pro-review';
