--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   box-sizing: border-box; }
@@ -836,7 +837,7 @@ select {
 
 .product-index-options-wrap {
   padding-top: 24px;
-  padding-bottom: 16px; }
+  padding-bottom: 22px; }
   .product-index-options-wrap select {
     border-color: #3DA8F5;
     margin-bottom: 8px;
@@ -845,12 +846,14 @@ select {
 .option-wrap {
   display: flex;
   flex-direction: column;
+  padding: 8px 12px;
   margin-bottom: 10px;
   background-color: #F7F8FA;
   border-radius: 4px; }
   .option-wrap-top {
     display: flex;
-    justify-content: space-between; }
+    justify-content: space-between;
+    margin-bottom: 8px; }
     .option-wrap-top .option-title {
       font-size: 16px;
       line-height: 1.5;
@@ -881,3 +884,192 @@ select {
       letter-spacing: -0.01em;
       color: #1B1C32;
       font-weight: 700; }
+
+.cart-total-price {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 22px; }
+  .cart-total-price .text {
+    font-size: 13px;
+    line-height: 1.53846;
+    color: #1B1C32;
+    font-weight: 700; }
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px; }
+  .buttons button {
+    width: 49%; }
+
+.product-tab-wrap {
+  padding: 15px 0;
+  background-color: #F7F8FA; }
+  .product-tab-wrap ul {
+    display: flex;
+    justify-content: flex-start; }
+    .product-tab-wrap ul li {
+      width: 148px;
+      text-align: center; }
+      .product-tab-wrap ul li a {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: -0.01em;
+        color: #3F4150;
+        font-weight: 700; }
+        .product-tab-wrap ul li a:hover {
+          color: #3DA8F5; }
+
+.writing-review-wrap {
+  width: 760px;
+  padding: 40px 0 0 40px;
+  border-radius: 4px; }
+  .writing-review-wrap .writing-review-form-wrap {
+    background-color: #FFFFFF;
+    padding-bottom: 40px; }
+  .writing-review-wrap .review-title-wrap {
+    text-align: center;
+    margin-bottom: 30px; }
+    .writing-review-wrap .review-title-wrap .review-title {
+      font-size: 20px;
+      line-height: 1.35;
+      font-weight: 700;
+      color: #1B1C32; }
+  .writing-review-wrap .review-point-info-wrap {
+    display: flex;
+    align-items: center;
+    height: 45px;
+    padding: 0 16px;
+    margin-bottom: 20px;
+    background-color: #525b61; }
+    .writing-review-wrap .review-point-info-wrap .review-point-info {
+      font-size: 15px;
+      line-height: 15px;
+      font-weight: 700;
+      color: #FFFFFF; }
+  .writing-review-wrap .product-thumbnail-and-info {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px; }
+    .writing-review-wrap .product-thumbnail-and-info .product-thumbnail {
+      width: 100px;
+      height: 100px;
+      border-radius: 4px;
+      background-repeat: no-repeat;
+      background-size: cover; }
+    .writing-review-wrap .product-thumbnail-and-info .product-title-and-company {
+      display: flex;
+      flex-direction: column;
+      margin-left: 12px; }
+      .writing-review-wrap .product-thumbnail-and-info .product-title-and-company .product-company {
+        font-size: 11px;
+        color: #757575;
+        margin-bottom: 6px; }
+      .writing-review-wrap .product-thumbnail-and-info .product-title-and-company .product-title {
+        font-size: 15px;
+        line-height: 1.2;
+        margin-bottom: 6px; }
+  .writing-review-wrap .review-count-wrap {
+    margin-bottom: 50px; }
+    .writing-review-wrap .review-count-wrap-top .review-count-text {
+      font-size: 15px;
+      font-weight: 700;
+      color: #292929; }
+    .writing-review-wrap .review-count-wrap-bottom {
+      display: flex;
+      justify-content: flex-start; }
+      .writing-review-wrap .review-count-wrap-bottom span {
+        width: 55px;
+        font-size: 15px;
+        line-height: 42px; }
+      .writing-review-wrap .review-count-wrap-bottom .review-star-count {
+        display: flex;
+        align-items: center; }
+  .writing-review-wrap .review-photo-wrap {
+    margin-bottom: 50px; }
+    .writing-review-wrap .review-photo-wrap .review-photo-title {
+      margin-bottom: 15px;
+      font-size: 15px;
+      font-weight: 700;
+      color: #292929; }
+    .writing-review-wrap .review-photo-wrap .review-photo-info {
+      margin-bottom: 10px;
+      font-size: 13px;
+      font-weight: 400;
+      color: #292929; }
+    .writing-review-wrap .review-photo-wrap label {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      border-radius: 4px;
+      border: 2px solid #35c5f0;
+      font-size: 14px;
+      line-height: 1.71429;
+      letter-spacing: -0.01em;
+      color: #35c5f0;
+      font-weight: 700;
+      background-color: #FFFFFF;
+      text-align: center;
+      cursor: pointer; }
+    .writing-review-wrap .review-photo-wrap input {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      border: 0; }
+  .writing-review-wrap .review-contents-wrap {
+    margin-bottom: 50px; }
+    .writing-review-wrap .review-contents-wrap .review-contents-title {
+      margin-bottom: 15px;
+      font-size: 15px;
+      font-weight: 700;
+      color: #292929; }
+    .writing-review-wrap .review-contents-wrap textarea {
+      padding: 9px 15px;
+      width: 100%;
+      height: 100px;
+      border: 1px solid #E0E2E7; }
+      .writing-review-wrap .review-contents-wrap textarea:hover {
+        background-color: #F7F8FA; }
+      .writing-review-wrap .review-contents-wrap textarea::placeholder {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: -0.01em;
+        color: #A2A5AF;
+        font-weight: 400; }
+  .writing-review-wrap .real-user-review-check {
+    margin-bottom: 50px; }
+    .writing-review-wrap .real-user-review-check-title {
+      margin-bottom: 15px;
+      font-size: 15px;
+      font-weight: 700;
+      color: #292929; }
+    .writing-review-wrap .real-user-review-check-box {
+      display: flex;
+      justify-content: flex-start; }
+      .writing-review-wrap .real-user-review-check-box input {
+        width: 22px;
+        height: 22px;
+        margin-right: 10px; }
+      .writing-review-wrap .real-user-review-check-box p {
+        font-size: 15px;
+        font-weight: 400;
+        color: #292929; }
+  .writing-review-wrap button.big.submit {
+    width: 100%;
+    background-color: #35c5f0; }
+  .writing-review-wrap .warning-info {
+    padding: 20px 40px;
+    border-radius: 4px;
+    background-color: #F7F8FA; }
+    .writing-review-wrap .warning-info li {
+      font-size: 13px;
+      line-height: 1.46;
+      font-weight: 400;
+      color: #424242; }
+      .writing-review-wrap .warning-info li::before {
+        content: "•";
+        margin-right: 5px; }
