--- a/styles/components/_pro-wring-review.scss
+++ b/styles/components/_pro-wring-review.scss
@@ -1,11 +1,53 @@
-.writing-review-wrap {
-  width: 760px;
-  padding: 40px 0 0 40px;
-  border-radius: 4px;
+.writing-review-button {
+  border: none;
+  background-color: inherit;
+  @include base($blue);
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.review-background {
+  position: relative;
+  .writing-review-wrap {
+    position: absolute;
+    left: 50%;
+    top: -100%;
+    transform: translate(-50%, -94%);
+    z-index: 2;
+    display: none;
+    width: 800px;
+    max-height: 0;
+    padding: 40px 40px 0 40px;
+    border-radius: 4px;
+    border: none;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: border-color 200ms ease-in, padding 200ms ease-in,
+            max-height 200ms ease-in, box-shadow 200ms ease-in;
+  }
+}
+
+.writing-review-wrap.show {
+  display: block;
+  position: relative;
+  z-index: 10;
+  max-height: 700px;
+  overflow: scroll;
+  border: 1px solid $border;
+  background-color: $white;
 
   .writing-review-form-wrap {
     background-color: $white;
     padding-bottom: 40px;
+  }
+
+  .review-form-close-button {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-color: inherit;
+    border: none;
+    cursor: pointer;
   }
 
   .review-title-wrap {
