--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,4 +21,5 @@
 @import './components/pro-index';
 @import './components/pro-options';
 @import './components/pro-tab';
-@import './components/pro-review';
+@import './components/pro-wring-review';
+@import './components/pro-user-styling-shot.scss';
