--- a/styles/components/_gnb.scss
+++ b/styles/components/_gnb.scss
@@ -1,5 +1,11 @@
 .gnb {
+  position: fixed;
+  width: 100%;
+  padding: 0 60px;
+  margin: 0 auto;
+  z-index: 3;
   border-bottom: 1px solid $border;
+  background-color: #ffffff;
 }
 
 .gnb-wrap {
