--- a/styles/components/_pro-tab.scss
+++ b/styles/components/_pro-tab.scss
@@ -1,6 +1,26 @@
 .product-tab-wrap {
   padding: 15px 0;
   background-color: $background;
+  &.fixed {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: fixed;
+    top: 81px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 54px;
+    padding: 0 60px;
+    margin: 0 auto;
+    z-index: 3;
+    &.bottom-fixed {
+      position: fixed;
+      top: 131px;
+      left: 0;
+      right: 0;
+    }
+  }
   ul {
     display: flex;
     justify-content: flex-start;
@@ -12,10 +32,22 @@
         @include base($primary);
         font-weight: 700;
 
+        span {
+          display: inline-block;
+          margin-left: 8px;
+          color: $blue;
+        }
+
         &:hover {
           color: $blue;
         }
       }
     }
   }
+}
+
+.find-position {
+  width: 5px;
+  height: 5px;
+  background-color: inherit;
 }
