--- a/styles/components/pro-user-styling-shot.scss
+++ b/styles/components/pro-user-styling-shot.scss
@@ -1,8 +1,13 @@
+@import '../constants/fonts';
+@import '../constants/colors';
+@import '../mixins/typography';
+
 .user-styling-shot-wrap {
   padding: 54px 0 98px 0;
   &-top {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 18px;
     .user-styling-shot-title {
       font-size: 18px;
       line-height: 28px;
@@ -11,6 +16,8 @@
       font-weight: 700;
 
       .user-styling-shot-count {
+        display: inline-block;
+        margin-left: 8px;
         color: #3DA8F5;
       }
     }
@@ -20,40 +27,161 @@
     position: relative;
     width: 672px;
     height: 520px;
-    overflow: hidden;
-
-    .right-arrow {
-      position: absolute;
-      z-index: 10;
-      right: 0;
-      top: 50%;
-  }
 
     ol {
       display: flex;
-      transform: translate3d(75px, 0, 0);
-      li {
-        margin-right: 4px;
-        .review-images-wrap {
-          position: relative;
-          .review-images {
-            width: 520px;
-            height: 520px;
+      width: 692px;
+      height: 520px;
+      
+      .slick-slider {
+        position: relative;
+        width: 100%;
+
+        .slick-prev,
+        .slick-next {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          top: 50%;
+          z-index: 1;
+          width: 40px;
+          height: 40px;
+          border: none;
+          border-radius: 50%;
+          background-color: #ffffff;
+        }
+
+        .slick-prev {
+          left: 20px;
+          transform: rotate(90deg);
+          &::before {
+            content: "";
+            width: 0;
+            height: 0;
+          }
+        }
+
+        .slick-next {
+          right: 20px;
+          transform: rotate(270deg);
+
+          &::before {
+            content: "";
+            width: 0;
+            height: 0;
+          }
+        }
+
+        .slick-list {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 520px;
+
+          .slick-track {
+            position: absolute;
+            top: 0;
+            left: 86px;
+            height: 100%;
+            display: flex;
+            // transform: translate3d(0, 0, 0);
+            transition: all 400ms ease-in;
+            li {
+              position: relative;
+              width: 520px;
+              height: 100%;
+              margin-left: 4px;
+              border-radius: 4px;
+              overflow: hidden;
+              .review-images-wrap {
+                width: 100%;
+                height: 100%;
+                border-radius: 4px;
+                .review-images {
+                  width: 100%;
+                  height: 100%;
+                  background-size: cover;
+                  background-repeat: no-repeat;
+                }
+              }
+
+              .review-user-info {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                position: absolute;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                z-index: 1;
+                width: 100%;
+                height: 54px;
+                padding-left: 16px;
+                padding-right: 20px;
+                background-color: rgba(0, 0, 0, 0.6);
+                border-radius: 4px;
+
+                &-left,
+                &-right {
+                  span {
+                    @include base($white);
+                  }
+                }
+
+                &-left {
+                  display: flex;
+                  align-items: center;
+                  img {
+                    width: 32px;
+                    height: 32px;
+                    margin-right: 8px;
+                    border-radius: 50%;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &-bottom {
+    position: relative;
+    width: 692px;
+    height: 75px;
+    margin-top: 4px;
+    .slick-list.mini {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 75px;
+
+      .slick-track.mini {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        display: flex;
+        // transform: translate3d(0, 0, 0);
+        transition: all 400ms ease-in;
+
+        .review-images-wrap.mini {
+          width: 75px;
+          height: 100%;
+          margin-right: 4px;
+          border-radius: 4px;
+          overflow: hidden;
+          .review-images.mini {
+            width: 100%;
+            height: 100%;
+            border: none;
             background-size: cover;
             background-repeat: no-repeat;
-            border-radius: 4px;
-          }
-          .review-user-info {
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            width: 520px;
-            padding: 11px 16px;
-            background-color: rgba(0, 0, 0, 0.3);
-            border-radius: 4px;
-            span {
-              color: #ffffff;
-            }
+            cursor: pointer;
           }
         }
       }
