--- a/styles/style.scss
+++ b/styles/style.scss
@@ -28,3 +28,4 @@
 @import './components/pro-image';
 @import './components/pro-tables';
 @import './components/pro-review';
+@import './components/pro-footer';
