--- a/styles/components/_pro-tables.scss
+++ b/styles/components/_pro-tables.scss
@@ -1,3 +1,14 @@
 .product-detail-info-table {
   margin-bottom: 98px;
 }
+
+.production-selling-delivery-wrap {
+  margin-bottom: 98px;
+  .production-selling-delivery {
+    h1 {
+      margin-bottom: 18px;
+      @include medium($dark);
+      font-weigth: 700;
+    }
+  }
+}
