--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,7 @@
 @import './modules/react-modal';
 @import './modules/table';
 @import './modules/star-count';
+@import './modules/paging';
 
 @import './components/login';
 @import './components/sign-up';
@@ -28,4 +29,6 @@
 @import './components/pro-image';
 @import './components/pro-tables';
 @import './components/pro-review';
+@import './components/pro-question';
+@import './components/pro-writing-question';
 @import './components/pro-footer';
