--- a/styles/modules/_react-modal.scss
+++ b/styles/modules/_react-modal.scss
@@ -35,6 +35,7 @@
   background-color: #fff;
   border-radius: 10px;
   width: 680px;
+  height: auto;
   top: 85%;
   transform: translateY(-50%);
   margin: 0 auto;
